# chabi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  package.json  pnpm-lock.yaml  tarpaulin.toml  test.key  test.key.pub
.github/workflows/: bench.yml  ci.yml  docs.yml  release-docker.yml  release.yml
apps/chabi-tester/: Cargo.toml
apps/chabi-tester/src/: main.rs
apps/chabi-tester/src/tests/: http.rs  redis.rs
apps/docs/: next.config.mjs  package.json  tsconfig.json
apps/docs/.source/: browser.ts  server.ts
apps/docs/app/: global.css  layout.tsx
apps/docs/app/(home)/: layout.tsx  page.tsx
apps/docs/app/docs/[[...slug]]/: page.tsx
apps/docs/components/: provider.tsx
apps/docs/components/home/: traffic-preview.tsx
apps/docs/content/docs/: index.mdx  meta.json
apps/docs/content/docs/benchmarks/: meta.json  methodology.mdx  results.mdx
apps/docs/content/docs/development/: architecture.mdx  meta.json
apps/docs/content/docs/operations/: configuration.mdx  (+3 more)
apps/docs/lib/: layout.shared.tsx  shared.ts  source.ts
apps/membench/: Makefile  README.md  docker-compose.yml  go.mod  go.sum  grafana.json  main.go  prometheus.yml
apps/membench/benchmark/: emit_prometheus.go  main.go
apps/membench/cmd/: benchmark.go  root.go
apps/membench/config/: main.go
apps/membench/db/: base.go  dicedb.go  null.go  redis.go
apps/membench/scripts/: init.sh  install_dicedb.sh  install_dotfiles.sh  install_go.sh  setup.sh
apps/membench/telemetry/: main.go  mem.go  prometheus.go
apps/self-test/: test_pubsub.py
rfcs/: WATCH  WATCH.SIZE
(+9 files in other folders)
