[package]
name = "chabi-tester"
version = "0.1.0"
edition = "2021"
description = "Integration tests for Chabi server"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-test = "0.4"
prettytable-rs = "0.10"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"